[gd_scene load_steps=6 format=2]

[ext_resource path="res://redesign/scenes/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://redesign/scenes/MenuBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://redesign/scripts/SettingsMenuBox.gd" type="Script" id=3]
[ext_resource path="res://redesign/scenes/SoundSlider.tscn" type="PackedScene" id=4]
[ext_resource path="res://redesign/scenes/MusicSliderBox.tscn" type="PackedScene" id=5]

[node name="SettingsMenuBox" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="MenuButtons" parent="ScrollContainer" index="0"]
margin_bottom = 183.0

[node name="FullscreenToggleButton" parent="ScrollContainer/MenuButtons" index="0" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_right = 674.0
toggle_mode = true
text = "Toggle Fullscreen"

[node name="SoundSlider" parent="ScrollContainer/MenuButtons" index="1" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_top = 51.0
margin_right = 674.0
margin_bottom = 112.0

[node name="MusicSliderBox" parent="ScrollContainer/MenuButtons" index="2" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 122.0
margin_right = 674.0
margin_bottom = 183.0

[connection signal="pressed" from="ScrollContainer/MenuButtons/FullscreenToggleButton" to="." method="_on_FullscreenToggleButton_pressed"]
[connection signal="valueChanged" from="ScrollContainer/MenuButtons/SoundSlider" to="." method="_on_MenuSliderBox_valueChanged"]
[connection signal="valueChanged" from="ScrollContainer/MenuButtons/MusicSliderBox" to="." method="_on_MusicSliderBox_valueChanged"]
